      Dirson for the patch.  (Closes: #826321)
  * dd-list:
    + Require an argument for ‘-s’ option, as intended, fixing a compatibility
      issue with Perl 5.24's Getopt::Long.  Thanks to Niko Tyni for the patch.
      (Closes: #826401)

  [ Paul Wise ]
  * uscan:
    + Fix typo of "release" in description of git repository mode

 -- James McCoy <jamessan@debian.org>  Sat, 04 Jun 2016 13:46:07 -0400

devscripts (2.16.5) unstable; urgency=medium

  [ James McCoy ]
  * uscan:
    + Import catfile from File::Spec::Functions to fix use of unqualified
      name.  Thanks to Craig Small for the patch.  (Closes: #823218)
    + Use builtin die function when telling the user they don't have
      LWP::UserAgent installed, instead of calling an undefined function.
      (Closes: #826146)
  * Declare compliance with policy 3.9.8, no changes needed.

  [ Osamu Aoki ]
  * uscan:
    + Clarify --no-symlink meaning.  (Closes: #819111)
    + No output if upstream == debian and no errors.  (Closes: #822649)
    + Better @ANY_VERSION@ regex.  (Closes: #821224)
  * uupdate:
    + Use "dpkg-source --skip-patches ..." with -f to prevent patches to be
      applied.  Thanks Herbert Parentes Fortes Neto.  (Closes: #823350)
  * test_package_lifecycle:
    + Handle new output format for dpkg-dev utilities.  (Closes: #825228)

  [ Ben Finney ]
  * scripts/*.bash_completion:
    + Render U+0009 TAB to spaces.
    + Normalise editor hints to preserve formatting.
    + Standardise explanatory header block.
  * debdiff:
    + Include all options in Bash command completion.  (Closes: #824372)
    + Correct Bash completion for ‘--debs-dir’ option.  (Closes: #824369)

  [ Paul Wise ]
  * licensecheck:
    + Detect files containing "do not modify" as generated
    + Detect files containing "Generated data" as generated
    + Detect files containing "edit the original" as generated

  [ Dominique Dumont ]
  * licensecheck:
    + added --deb-fmt option to use dep-5 license keywords (see #472199)