@@ -83,6 +83,9 @@ this option.
 See the above section \fBDirectory name checking\fR for an explanation of
 this option.
 .TP
+\fB\-\-list-debs\fR
+List the filenames of the .deb packages, and do not display their contents.
+.TP
 \fB\-\-no-conf\fR, \fB\-\-noconf\fR
 Do not read any configuration files.  This can only be used as the
 first option given on the command-line.
