@@ -13,6 +13,11 @@ devscripts (2.16.6) UNRELEASED; urgency=medium
   * uscan:
     + Fix typo of "release" in description of git repository mode
 
+  [ Antonio Terceiro ]
+  * debc:
+    + Added --list-debs option, which makes debc only list the filenames of
+      the .deb files, and none of their contents.
+
  -- James McCoy <jamessan@debian.org>  Sat, 04 Jun 2016 13:46:07 -0400
 
 devscripts (2.16.5) unstable; urgency=medium
